--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
   "author": "Alexandra Sukhova",
   "license": "ISC",
   "dependencies": {
-    "core-js": "^3.36.1",
-    "jquery": "^3.7.1"
+    "core-js": "^3.36.1"
   },
   "devDependencies": {
     "@babel/core": "^7.24.3",
